Changes for 2.4.4rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Japanese and Slovak translations; thanks to Zabbix translators (Richlv)
A.F....PS. [ZBXNEXT-2160] added support for extended IP ranges in network discovery and action conditions (Ivo, Sasha, Wiper)

Bug fixes:
...G...... [ZBX-6047] fixed system.boottime and system.uptime returning incorrect results on Solaris zones (asaveljevs)
..F....... [ZBX-8874] fixed LLD rule form flexible interval field being submitted when other form fields are in focus (Ivo)
....I..... [ZBX-9169] fixed upgrade of the proxy database with several discovery rules (Sasha)
........S. [ZBX-9176] fixed {DISCOVERY.SERVICE.NAME} macro to expand properly for HTTPS and Telnet services (asaveljevs)
....I..... [ZBX-9185] fixed upgrade procedure in case database version is greater than version of the binary (Sasha)
..F....... [ZBX-9177] improved host and item name column widths on Monitoring / Latest data page (Krists)
.......PS. [ZBX-9154] fixed compilation error with Oracle backend (wiper)
..F....... [ZBX-9042] unified "mass update" spelling in trigger configuration page (Richlv)
..F....... [ZBX-9153] fixed vmware.version item key being listed as vmware.eventlog in the item key helper (Richlv)
A......... [ZBX-8950] fixed "selecIconMap" option in map.get method (Oleg)
..F....... [ZBX-8405] fixed typo in item key helper for system.cpu.num item description (asaveljevs)
..F....... [ZBX-8846] fixed non-existent page displaying (Oleg)
........S. [ZBX-9126] fixed processing of trigger/graph prototypes in case when all item prototypes in trigger/graph prototypes were changed (Sasha)

--------------------------------------------------------------------------------
Changes for 2.4.3

2.4.3rc1 was released as 2.4.3 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.3rc1

New features: